--- a/cheriecy/index.html
+++ b/cheriecy/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-    <title>Range Input</title>
-  </head>
-  <body>
-    <section id="overlay">
-      <img src="https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_burger-logo.svg" alt="Davie's Burgers Logo" id="logo">
-      <hr>
-      <form>
-        <h1>Create a burger!</h1>
-				<section class="protein">
-          <label for="patty">What type of protein would you like?</label>
-    			<input type="text" name="patty" id="patty" value="beef">
-        </section>
-        <hr>
-
-        <section class="patties">
-          <label for="amount">How many patties would you like?</label>
-	        <!--Add your code below-->
-					<input id="amount" type="number" step="1" name="amount">
-          
-        </section>
-      </form>
-    </section>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+        <h1><b>Hello,World!</b></h1>
+    </div>
+    <div>
+        <!--Google.com-->
+        hyperlink:<a href="https://www.google.com">This link will direct you go "Google"</a>
+    </div>
+    <div>
+        hyperlink 2:<a href="https:www.youtube.com">This link will direct you to "Youtube"</a>
+    </div>
+    <div>hyperlink 3:<a href="./P2.html">This link will direct you to the "P2 file"</a></div>
+</body>
 </html>
