Latest code added

--- a/codecademy_exercise/HTML-Fashion_Blog/index_fashion_blog.html
+++ b/codecademy_exercise/HTML-Fashion_Blog/index_fashion_blog.html
@@ -41,10 +41,13 @@
 
 
           <h4>Related Content</h4>
-            <ul>How To Style Boyfriend Jeans</ul>
-            <ul>When Print Is Too Much</ul>
-            <ul>The Overalls Trend</ul>
-            <ul>Fall’s It Color: Blush</ul>
+            <ul>
+              <li>How To Style Boyfriend Jeans</li>
+              <li>When Print Is Too Much</li>
+              <li>The Overalls Trend</li>
+              <li>Fall’s It Color: Blush</li>
+            </ul>
+            
        <div id='contact'>
         <strong>email : isa@fashionblog.com</strong> | <strong>917-555-1098</strong>  | <strong>371 284th St, New York, NY, 10001</strong> 
       <a href="#contact"><img></a> 
