--- a/codecademy_exercise/HTML-Form_a_Story/HTML_Story.html
+++ b/codecademy_exercise/HTML-Form_a_Story/HTML_Story.html
@@ -32,6 +32,33 @@
     <br>
         <label for="verb-1">Verb (ends in -ing) :</label>
             <input id="verb-1" name="verb-1" type="text" required> 
-    </section>
+    <br>
+        <label for="num-1">Number :</label>
+            <input id="num-1" name="num-1" type="number" required>     
+    <br>
+        <span>Yes or No:</span>
+            <input id="yes" type="radio" name="answer" value="yes" required>
+                <label for="yes">Yes</label>
+            <input id="no" type="radio" name="answer" value="no">
+                <label for="no">No</label>
+    <br>
+        <label for="speed">Relative speed (ends in -er):</label>
+            <select id="speed" name="speed" required>
+                <option value="faster">Faster</option>
+                <option value="slower">Slower</option>
+    </select>
+    <br>
+        <label for="quote">Motivational Quote:</label>
+            <input id="quote" name="quote" type="text" required list="quote-choices">
+        <datalist id="quote-choices">
+                <option value="winner gets ice cream!"></option>
+                <option value="winner gets cookies!"></option>
+                <option value="winner gets pizza!"></option>
+        </datalist>
+    <br>
+        <label for="message">Meaningful Message:</label>
+            <textarea id="message" name="message" required></textarea>
+    <br>
+        </section>
   </body>
 </html>
