--- a/codecademy_exercise/CSS-Typography/index.html
+++ b/codecademy_exercise/CSS-Typography/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Morocco</title>
-  <link rel="stylesheet" type="text/css" href="styles/reset.css">
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" href="/Users/cherie2/Desktop/fewd-c02/codecademy_exercise/CSS-Typography/reset.css">
+  <link rel="stylesheet" type="text/css" href="/Users/cherie2/Desktop/fewd-c02/codecademy_exercise/CSS-Typography/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Work+Sans:wght@400;500;800&display=swap" rel="stylesheet">
 
 </head>
